--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" content="IE-edge"></meta>
-        <link rel="stylesheet" href="style.css"></link>
+        <link rel="stylesheet" href="index.css"></link>
         <script src="./index.js"></script>
         <title>TIC-TAC-TOE</title>
     </head>
